--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,23 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 body {
+    display: flex;
     background: white;
     font-family: Arial, Helvetica, sans-serif;
+    flex-direction: column;
 }
 
 .head {
     display: flex;
-    width: 2000px;
-    max-width: 100%;
+    max-width: 200rem;
     background-color: black;
     color: aliceblue;
-    height: 50px;
+    height: 3rem;
     justify-content: space-between;
+    flex-direction: row;
 }
 
 .head .calender {
@@ -20,6 +27,7 @@ body {
 }
 
 .head .tel {
+    flex-direction: row;
     font-weight: bold;
     font-style: normal;
     margin: auto 20px;
@@ -117,60 +125,64 @@ span p:hover {
 
 .first-img {
     display: flex;
-    width: 100%;
-    height: 500px;
+    max-width: 100%;
+    min-height: 30rem;
     justify-content: space-evenly;
-    margin-top: 20px;
+    margin-top: 2em;
 }
 
 
 .first-img img {
-    width: 550px;
+    width: 10rem;
     height: auto;
 }
 
 .one img {
-    width: 550px;
-    height: 375px;
+    width: 35rem;
+    height: 23.5em;
     margin-left: 20px;
 }
 
 .two img {
-    width: 550px;
-    height: 375px;
+    width: 35rem;
+    height: 23.5em;
 }
 
 .three img {
-    width: 550px;
-    height: 375px;
+    width: 35rem;
+    height: 23.5em;
 }
 
 .custom {
     display: flex;
-    width: 100%;
+    max-width: 100%;
 }
 
 .clubs {
     background: #DBC1E1;
-    width: 650px;
-    height: 300px;
-    margin-left: 200px;
-    margin-right: 30px;
+    width: 40rem;
+    min-height: 300px;
+    margin-left: 15em;
+    margin-right: 1.5em;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
 }
 
 
 .clubs h1 {
     text-transform: capitalize;
     color: white;
-    margin-top: 70px;
-    margin-bottom: 30px;
+    margin-top: 1.75em;
+    margin-bottom: 0.5em;
 }
 .clubs h3 {
     text-transform: capitalize;
     color: white;
     margin-bottom: 30px;
     margin-left: -270px;
+    align-self: center;
 }
 
 .custom .clubs p {
@@ -327,82 +339,22 @@ span p:hover {
     margin: 20px 20px;
 }
 
-@media only screen and (max-width: 480px) and (orientation: landscape) {
+@media only screen and (max-width: 480px) {
+    
     .head {
-        display: none;
-        width: 100%;
-    }
-
-    .header {
-        width: 100%;
-    }
-
-    .header .quiz {
-        width: 100%;
+        display: flex;
+        max-width: 100%;
+        flex-direction: column;
     }
 
     .first-img {
-        width: 100%;
+        display: flex;
+        flex-direction: column;
     }
-
-    .one img {
-        width: 100%;
+    
+    .first-img {
+        display: flex;
+        flex-direction: column;
     }
-
-    .two img {
-        width: 100%;
-    }
-
-    .three img {
-        width: 100%;
-    }
-
-    .custom {
-        width: 100%;
-    }
-
-    .clubs {
-        width: 100%;
-    }
-
-    .custom .clubs p {
-        width: 100%;
-    }
-
-    .fit {
-        width: 100%;
-    }
-
-    .fit-quiz p {
-        width: 100%;
-    }
-
-    .second-img {
-        width: 100%;
-    }
-
-
-    .second-img img {
-        width: 100%;
-    }
-
-    .four img {
-        width: 100%;
-    }
-
-    .five img {
-        width: 100%;
-    }
-
-    .six img {
-        width: 100%;
-    }
-
-    .final img  {
-        width: 100%;
-    }   
-
-    .footer {
-        width: 100%;
-    }
+    
 }
